# swagger.json
@@ -5,7 +5,7 @@
     "description": "Health Clinic API allows you to manage patients, appointments, and medical records in a health clinic application.",
     "version": "1.0.0"
   },
-  "host": "health-clinic-app.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -26,7 +26,7 @@
     }
   ],
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/patients/": {
